feat: add header for about page

--- a/match-match-game/pages/about/index.html
+++ b/match-match-game/pages/about/index.html
@@ -8,6 +8,35 @@
   <title>About Game</title>
 </head>
 <body>
+  <header>
+    <div class="logo">
+      <div class="upper_logo">match</div>
+      <div class="lower_logo">match</div>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <div class="navbar__card active">
+            <img src="../../assets/icons/about.svg" alt="about">
+            <a href="#">About Game</a>
+          </div>
+        </li>
+        <li>
+          <div class="navbar__card">
+            <img src="../../assets/icons/scores.svg" alt="scores">
+            <a href="#scores">Best Score</a></li>
+          </div>
+        <li>
+          <div class="navbar__card">
+            <img src="../../assets/icons/settings.svg" alt="settings">
+            <a href="#settings">Game Setting</a></li>
+          </div>
+      </ul>
+    </nav>
+    <div class="header_btn">
+      <a href="#">register new player</a>
+    </div>
+  </header>
   
 </body>
 </html>
