feat: add fonts for all project and add content; refactor header nav

--- a/match-match-game/pages/about/index.html
+++ b/match-match-game/pages/about/index.html
@@ -16,6 +16,9 @@
     <nav>
       <ul>
         <li>
+          <div class="empty_card"></div>
+        </li>
+        <li>
           <div class="navbar__card active">
             <img src="../../assets/icons/about.svg" alt="about">
             <a href="#">About Game</a>
@@ -24,19 +27,72 @@
         <li>
           <div class="navbar__card">
             <img src="../../assets/icons/scores.svg" alt="scores">
-            <a href="#scores">Best Score</a></li>
+            <a href="#scores">Best Score</a>
           </div>
+        </li>
         <li>
           <div class="navbar__card">
             <img src="../../assets/icons/settings.svg" alt="settings">
-            <a href="#settings">Game Setting</a></li>
+            <a href="#settings">Game Settings</a>
           </div>
+        </li>
+        <li>
+          <div class="empty_card"></div>
+        </li>
+        <li>
+          <div class="empty_card"></div>
+        </li>
       </ul>
     </nav>
     <div class="header_btn">
       <a href="#">register new player</a>
     </div>
   </header>
-  
+  <section class="about">
+    <div class="wrapper">
+      <div class="content">
+        <div class="about_title">
+          How to play?
+        </div>
+        <div class="about_instruction">
+          <div class="steps">
+            <div class="steps_row">
+              <div class="step first_step">
+                <div class="step_image">
+                  <div class="number">1</div>
+                </div>
+                <span>Register new player in game</span>
+              </div>
+              <div class="image">
+                <img src="../../assets/images/about/registration.png" alt="register">
+              </div>
+            </div>
+            <div class="steps_row">
+              <div class="step second_step">
+                <div class="step_image">
+                  <div class="number">2</div>
+                </div>
+                <span>Configure your game settings</span>
+              </div>
+              <div class="image">
+                <img src="../../assets/images/about/button.png" alt="button">
+              </div>
+            </div>
+            <div class="steps_row">
+              <div class="step third_step">
+                <div class="step_image">
+                  <div class="number">3</div>
+                </div>
+                <span>Start you new game! Remember card positions and match it before times up.</span>
+              </div>
+              <div class="image">
+                <img src="../../assets/images/about/card_game.png" alt="game">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
