refactor: change class names for better readability

--- a/match-match-game/pages/about/index.html
+++ b/match-match-game/pages/about/index.html
@@ -10,13 +10,13 @@
 <body>
   <header>
     <div class="logo">
-      <div class="upper_logo">match</div>
-      <div class="lower_logo">match</div>
+      <div class="upper-logo">match</div>
+      <div class="lower-logo">match</div>
     </div>
     <nav>
       <ul>
         <li>
-          <div class="empty_card"></div>
+          <div class="empty-card"></div>
         </li>
         <li>
           <div class="navbar__card active">
@@ -37,10 +37,10 @@
           </div>
         </li>
         <li>
-          <div class="empty_card"></div>
+          <div class="empty-card"></div>
         </li>
         <li>
-          <div class="empty_card"></div>
+          <div class="empty-card"></div>
         </li>
       </ul>
     </nav>
@@ -51,14 +51,14 @@
   <section class="about">
     <div class="wrapper">
       <div class="content">
-        <div class="about_title">
+        <div class="about__title">
           How to play?
         </div>
-        <div class="about_instruction">
+        <div class="about__instructions">
           <div class="steps">
             <div class="steps_row">
-              <div class="step first_step">
-                <div class="step_image">
+              <div class="step first-step">
+                <div class="step__image">
                   <div class="number">1</div>
                 </div>
                 <span>Register new player in game</span>
@@ -68,8 +68,8 @@
               </div>
             </div>
             <div class="steps_row">
-              <div class="step second_step">
-                <div class="step_image">
+              <div class="step second-step">
+                <div class="step__image">
                   <div class="number">2</div>
                 </div>
                 <span>Configure your game settings</span>
@@ -79,8 +79,8 @@
               </div>
             </div>
             <div class="steps_row">
-              <div class="step third_step">
-                <div class="step_image">
+              <div class="step third-step">
+                <div class="step__image">
                   <div class="number">3</div>
                 </div>
                 <span>Start you new game! Remember card positions and match it before times up.</span>
