feat: add game setting page template

--- a/match-match-game/pages/about/index.html
+++ b/match-match-game/pages/about/index.html
@@ -21,7 +21,7 @@
         <li>
           <div class="navbar__card active">
             <img src="../../assets/icons/about.svg" alt="about">
-            <a href="#">About Game</a>
+            <a href="../about/index.html">About Game</a>
           </div>
         </li>
         <li>
@@ -33,7 +33,7 @@
         <li>
           <div class="navbar__card">
             <img src="../../assets/icons/settings.svg" alt="settings">
-            <a href="#settings">Game Settings</a>
+            <a href="../settings/index.html">Game Settings</a>
           </div>
         </li>
         <li>
