--- a/match-match-game/pages/settings/index.html
+++ b/match-match-game/pages/settings/index.html
@@ -27,7 +27,7 @@
         <li>
           <div class="navbar__card">
             <img src="../../assets/icons/scores.svg" alt="scores">
-            <a href="#scores">Best Score</a>
+            <a href="../scores/index.html">Best Score</a>
           </div>
         </li>
         <li>
