refactor: header navbar items

--- a/match-match-game/pages/scores/index.html
+++ b/match-match-game/pages/scores/index.html
@@ -19,22 +19,28 @@
           <div class="empty-card"></div>
         </li>
         <li>
-          <div class="navbar__card">
-            <img src="../../assets/icons/about.svg" alt="about">
-            <a href="../about/index.html">About Game</a>
-          </div>
+          <a href="../about/index.html">
+            <div class="navbar__card">
+              <img src="../../assets/icons/about.svg" alt="about">
+              <span>About Game</span>
+            </div>
+          </a>
         </li>
         <li>
-          <div class="navbar__card">
-            <img src="../../assets/icons/scores.svg" alt="scores">
-            <a href="../scores/index.html">Best Score</a>
-          </div>
+          <a href="../scores/index.html">
+            <div class="navbar__card active">
+              <img src="../../assets/icons/scores.svg" alt="scores">
+              <span>Best Score</span>
+            </div>
+          </a>
         </li>
         <li>
-          <div class="navbar__card active">
-            <img src="../../assets/icons/settings.svg" alt="settings">
-            <a href="../settings/index.html">Game Settings</a>
-          </div>
+          <a href="../settings/index.html">
+            <div class="navbar__card">
+              <img src="../../assets/icons/settings.svg" alt="settings">
+              <span>Game Settings</span>
+            </div>
+          </a>
         </li>
         <li>
           <div class="empty-card"></div>
