refactor card-container logic; rename instructions images

--- a/match-match-game/pages/game/index.html
+++ b/match-match-game/pages/game/index.html
@@ -66,8 +66,8 @@
         </div>
         <div class="game-field__container">
           <div class="game-field">
-            <div class="card-container">
-              <div class="card flipped">
+            <div class="card-container flipped">
+              <div class="card">
                 <div class="card-back"></div>
                 <div class="card-front">
                   <div class="mask match">
@@ -78,8 +78,8 @@
                 </div>
               </div>
             </div>
-            <div class="card-container">
-              <div class="card flipped">
+            <div class="card-container flipped">
+              <div class="card">
                 <div class="card-back"></div>
                 <div class="card-front">
                   <div class="mask discrepancy">
