--- a/match-match-game/pages/about/index.html
+++ b/match-match-game/pages/about/index.html
@@ -70,7 +70,7 @@
                 <span>Register new player in game</span>
               </div>
               <div class="image">
-                <img src="../../assets/images/about/registration.png" alt="register">
+                <img src="../../assets/images/about/1.png" alt="register">
               </div>
             </div>
             <div class="steps_row">
@@ -81,7 +81,7 @@
                 <span>Configure your game settings</span>
               </div>
               <div class="image">
-                <img src="../../assets/images/about/button.png" alt="button">
+                <img src="../../assets/images/about/2.png" alt="button">
               </div>
             </div>
             <div class="steps_row">
@@ -92,7 +92,7 @@
                 <span>Start you new game! Remember card positions and match it before times up.</span>
               </div>
               <div class="image">
-                <img src="../../assets/images/about/card_game.png" alt="game">
+                <img src="../../assets/images/about/3.png" alt="game">
               </div>
             </div>
           </div>
